--- a/style.css
+++ b/style.css
@@ -16,32 +16,35 @@ body {
     font-family: sans-serif;
   }
   
-  .w {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\crash.png");
-  }
-  
   .a {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\kick.png");
+    background-image: url("images/tom3.png");
   }
   
-  .s {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\snare.png");
+  .b {
+    background-image: url("images/kick.png"); 
+    width: 5px;
+    background-size: 120px 130px;
+  }
+  
+  .c {
+    background-image: url("images/snare.png");
+    background-size: 120px 100px;
   }
   
   .d {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\tom1.png");
+    background-image: url("images/tom1.png");
   }
   
-  .j {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\tom2.png");
+  .e {
+    background-image: url("images/tom2.png");
   }
   
-  .k {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\tom3.png");
+  .f {
+    background-image: url("images/crash.png");
   }
   
-  .l {
-    background-image: url("C:\Users\pandu\Desktop\MSIT\REACT JS\week 2\drumkit\images\tom4.png");
+  .g {
+    background-image: url("images/tom4.png");
   }
   
   .set {
@@ -53,18 +56,16 @@ body {
     opacity: 0.5;
   }
   
-  .red {
-    color: red;
-  }
+  
   
   .drum {
     outline: none;
     border: 10px solid #404B69;
-    font-size: 5rem;
+    font-size: 1rem;
     font-family: 'Arvo', cursive;
     line-height: 2;
-    font-weight: 900;
-    color: #DA0463;
+    font-weight: 500;
+    color: #09eee2;
     text-shadow: 3px 0 #DBEDF3;
     border-radius: 15px;
     display: inline-block;
